2013-01-17  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/mpa.c: Fix header comment.

2013-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/elf.h (R_386_SIZE32): New relocation.
	* sysdeps/i386/dl-machine.h (elf_machine_rel): Handle
	R_386_SIZE32.
	(elf_machine_rela): Likewise.
	* sysdeps/x86_64/dl-machine.h (elf_machine_rela): Handle
	R_X86_64_SIZE64 and R_X86_64_SIZE32.

2013-01-17  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/bits/mathdef.h [_SOFT_FLOAT || __NO_FPRS__]
	(FP_FAST_FMA): Do not define.
	[_SOFT_FLOAT || __NO_FPRS__] (FP_FAST_FMAF): Likewise.
	* sysdeps/powerpc/fpu/bits/fenvinline.h [__GNUC__ && !_SOFT_FLOAT
	&& !__NO_MATH_INLINES]: Add [!__NO_FPRS__] condition.
	* sysdeps/powerpc/fpu/bits/mathinline.h [__GNUC__ &&
	!_SOFT_FLOAT]: Likewise.
	* sysdeps/powerpc/fpu/fpu_control.h [_SOFT_FLOAT || __NO_FPRS__]
	[_SOFT_FLOAT || __NO_FPRS__] (_FPU_RESERVED): Define with generic
	value.
	[_SOFT_FLOAT || __NO_FPRS__] (_FPU_DEFAULT): Likewise.
	[_SOFT_FLOAT || __NO_FPRS__] (fpu_control_t): Likewise.
	[_SOFT_FLOAT || __NO_FPRS__] (_FPU_GETCW): Likewise.
	[_SOFT_FLOAT || __NO_FPRS__] (_FPU_SETCW): Likewise.
	[_SOFT_FLOAT || __NO_FPRS__] (__fpu_control): Likewise.
	[!_SOFT_FLOAT && !__NO_FPRS__]: Condition previous contents of
	file.

2013-01-16  Andreas Schwab  <schwab@suse.de>

	[BZ #14327]
	* include/stdlib.h (__mktemp): Add declaration.
	* misc/mktemp.c (__mktemp): Renamed from mktemp, add weak alias.
	* misc/Versions (GLIBC_PRIVATE): Add __mktemp.

2013-01-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/atnat.h: Remove constant value
	definitions.
	* sysdeps/ieee754/dbl-64/atnat2.h: Likewise.
	* sysdeps/ieee754/dbl-64/mpa.c: Do not include mpa2.h.
	* sysdeps/ieee754/dbl-64/mpa.h: Move all constant value
	definitions here.
	* sysdeps/ieee754/dbl-64/mpa2.h: Remove.
	* sysdeps/ieee754/dbl-64/mpatan.h: Remove constant value
	definitions.
	* sysdeps/ieee754/dbl-64/mpatan2.c (__mpatan2): Remove ZERO