@@ -1,3 +1,10 @@
+2013-01-17  Pino Toscano  <toscano.pino@tiscali.it>
+
+	* sysdeps/unix/sysv/linux/malloc-sysdep.h (HAVE_MREMAP): New define.
+	* malloc/malloc.c: Include <unistd.h> and <malloc-sysdep.h>.
+	[!HAVE_MREMAP]: Remove [defined linux] case.
+	* malloc/arena.c: Do not include <malloc-sysdep.h>.
+
 2013-01-17  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	* sysdeps/ieee754/dbl-64/mpa.c: Fix header comment.
